# Dabble

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  app.py  backup_knowledge.sh  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
.cursor/rules/: coding-guidelines.mdc
.streamlit/: config.toml
archive/: original-plan.md  smoke-test-plan.md
conversations/: 2026-03-07T23-11.txt  example.txt
data/: Favorites Export UTF8.txt  Favorites Export.txt
docs/: concurrency-and-persistence.md  concurrency-fix-plan.md  decisions.md  design-skills-kb.md  features.md  next-steps-kb-maintenance.md  next-steps-kb-provenance.md  next-steps-notebook.md  next_step_parquet.md  plan-kb-maintenance.md
prompts/: system_prompt.txt  welcome_message.txt
src/: chart_renderer.py  claude_handler.py  conversation_file.py  duckdb_analytic.py  knowledge_base.py
src/pages/: conversation.py  entry.py  learn_review.py  notebook_review.py  report_review.py  snapshot_review.py
test_data/: apple_music_tips.md
tools/: rebuild_knowledge_base.py  seed_knowledge_base.py
