[project]
name = "dabble"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "boto3",
    "duckdb==1.5.1",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "python-dotenv",
    "streamlit",
]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
